[tool.poetry]
name = "learn-nlp-with-transformers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "learn_nlp_with_transformers"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
transformers = "^4.28.1"
datasets = "^2.12.0"
notebook = "^6.5.4"
torch = "^2.0.0"
sklearn = "^0.0.post4"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
torchtext = "^0.15.1"
seaborn = "^0.12.2"
spacy = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
